@@ -18,6 +18,7 @@ define( function( require ) {
   var MStrings = require( "molarity/MStrings" );
   var Property = require( "PHETCOMMON/model/property/Property" );
   var ResetAllButton = require( "SCENERY_PHET/ResetAllButton" );
+  var SolutionNode = require( "molarity/view/SolutionNode" );
   var TabView = require( "JOIST/TabView" );
   var Text = require( "SCENERY/nodes/Text" );
 
@@ -35,6 +36,7 @@ define( function( require ) {
 
     // beaker, with solution and precipitate inside of it
     var beakerNode = new BeakerNode( model.solution, model.getSolutionVolumeRange().max, valuesVisible );
+    var solutionNode = new SolutionNode( beakerNode.getCylinderSize(), beakerNode.getCylinderEndHeight(), model.solution, model.getSolutionVolumeRange().max );
 
     // Show Values check box
     var showValuesCheckBox = new CheckBox( new Text( MStrings.showValues, { font: new MFont( 22 ) } ), valuesVisible );
@@ -46,6 +48,7 @@ define( function( require ) {
     } );
 
     // rendering order
+    this.addChild( solutionNode );
     this.addChild( beakerNode );
     this.addChild( showValuesCheckBox );
     this.addChild( resetAllButton );
@@ -54,6 +57,9 @@ define( function( require ) {
     {
       beakerNode.left = 100;
       beakerNode.top = 100;
+      // same coordinate frame as beaker
+      solutionNode.x = beakerNode.x;
+      solutionNode.y = beakerNode.y;
       showValuesCheckBox.left = beakerNode.right + 50;
       showValuesCheckBox.top = beakerNode.top;
       resetAllButton.left = beakerNode.right + 50;
